--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
     <artifactId>actors</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
+    <name>Actors</name>
+    <description>A simple actor model implementation.</description>
+
     <licenses>
         <license>
             <name>MIT License</name>
