--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>de.muspellheim</groupId>
     <artifactId>actors</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
 
     <name>Actors</name>
     <description>A simple actor model implementation.</description>
