--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: java
 jdk:
   - oraclejdk8
-script: mvn install -P bintray
+install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V -P bintray
+script: mvn test -P bintray
