--- a/pom.xml
+++ b/pom.xml
@@ -8,44 +8,51 @@
     <groupId>de.muspellheim</groupId>
     <artifactId>actors</artifactId>
     <version>1.1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <name>Actors</name>
-    <description>A simple actor model implementation.</description>
-    <url>https://github.com/falkoschumann/java-actors</url>
+    <description>
+        A simple actor model implementation.
+    </description>
+    <url>https://github.com/falkoschumann/java-${project.artifactId}</url>
 
     <licenses>
         <license>
             <name>MIT License</name>
-            <url>https://opensource.org/licenses/MIT</url>
+            <url>LICENSE.txt</url>
         </license>
     </licenses>
 
     <developers>
         <developer>
+            <id>falkoschumann</id>
             <name>Falko Schumann</name>
             <email>falko.schumann@muspellheim.de</email>
+            <url>http://www.muspellheim.de</url>
         </developer>
     </developers>
 
     <scm>
-        <connection>scm:git:git@github.com:falkoschumann/java-actors.git</connection>
-        <developerConnection>scm:git:git@github.com:falkoschumann/java-actors.git</developerConnection>
-        <url>git@github.com:falkoschumann/java-actors.git</url>
+        <connection>scm:git:https://github.com/falkoschumann/java-${project.artifactId}.git</connection>
+        <developerConnection>scm:git:https://github.com/falkoschumann/java-${project.artifactId}.git</developerConnection>
+        <url>http://github.com/falkoschumann/java-${project.artifactId}</url>
     </scm>
 
     <issueManagement>
         <system>GitHub</system>
-        <url>https://github.com/falkoschumann/java-actors/issues</url>
+        <url>https://github.com/falkoschumann/java-${project.artifactId}/issues</url>
     </issueManagement>
 
     <ciManagement>
-        <system>Travis CI</system>
-        <url>https://travis-ci.org/falkoschumann/java-actors</url>
+        <system>travis-ci</system>
+        <url>https://travis-ci.org/falkoschumann/java-${project.artifactId}</url>
     </ciManagement>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -83,34 +90,35 @@
     <build>
         <plugins>
             <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.6</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <archive>
+                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+                    </archive>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.6</version>
-                <executions>
-                    <execution>
-                        <id>default-jar</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                        <configuration>
-                            <useDefaultManifestFile>true</useDefaultManifestFile>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
                 <artifactId>maven-source-plugin</artifactId>
                 <version>3.0.0</version>
                 <executions>
                     <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.3</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
                         <goals>
                             <goal>jar</goal>
                         </goals>
@@ -118,12 +126,33 @@
                 </executions>
             </plugin>
             <plugin>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.3</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.5.1</version>
                 <executions>
                     <execution>
+                        <id>create-docs</id>
+                        <phase>prepare-package</phase>
                         <goals>
-                            <goal>jar</goal>
+                            <goal>site</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>bin</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -133,12 +162,31 @@
                 <artifactId>findbugs-maven-plugin</artifactId>
                 <version>3.0.3</version>
                 <configuration>
-                    <threshold>High</threshold>
+                    <threshold>high</threshold>
                     <includeTests>true</includeTests>
-                    <skip>true</skip>
+                    <excludeFilterFile>src/main/config/findbugs-exclude.xml</excludeFilterFile>
                 </configuration>
                 <executions>
                     <execution>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.17</version>
+                <executions>
+                    <execution>
+                        <id>validate</id>
+                        <phase>validate</phase>
+                        <configuration>
+                            <configLocation>src/main/config/checkstyle.xml</configLocation>
+                            <headerLocation>src/main/config/java.header</headerLocation>
+                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
+                        </configuration>
                         <goals>
                             <goal>check</goal>
                         </goals>
@@ -151,6 +199,7 @@
                 <version>3.1.0</version>
                 <executions>
                     <execution>
+                        <id>default-bnd-process</id>
                         <goals>
                             <goal>bnd-process</goal>
                         </goals>
@@ -165,7 +214,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>2.8.1</version>
+                <version>2.9</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -178,11 +227,70 @@
                 <version>2.19.1</version>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-changes-plugin</artifactId>
+                <version>2.11</version>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>changes-report</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
                 <version>3.0.3</version>
                 <configuration>
                     <includeTests>true</includeTests>
+                    <excludeFilterFile>src/main/config/findbugs-exclude.xml</excludeFilterFile>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+                    <configLocation>src/main/config/checkstyle.xml</configLocation>
+                    <headerLocation>src/main/config/java.header</headerLocation>
+                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
+                </configuration>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>checkstyle</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>taglist-maven-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <tagListOptions>
+                        <tagClasses>
+                            <tagClass>
+                                <displayName>Fix me</displayName>
+                                <tags>
+                                    <tag>
+                                        <matchString>FIXME</matchString>
+                                        <matchType>ignoreCase</matchType>
+                                    </tag>
+                                </tags>
+                            </tagClass>
+                            <tagClass>
+                                <displayName>To do</displayName>
+                                <tags>
+                                    <tag>
+                                        <matchString>TODO</matchString>
+                                        <matchType>ignoreCase</matchType>
+                                    </tag>
+                                </tags>
+                            </tagClass>
+                        </tagClasses>
+                    </tagListOptions>
                 </configuration>
             </plugin>
             <plugin>
@@ -220,7 +328,7 @@
                 <repository>
                     <id>bintray-falkoschumann-maven</id>
                     <name>falkoschumann-maven</name>
-                    <url>https://api.bintray.com/maven/falkoschumann/maven/actors/;publish=1</url>
+                    <url>https://api.bintray.com/maven/falkoschumann/maven/${project.artifactId}/;publish=1</url>
                 </repository>
             </distributionManagement>
         </profile>
