--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.muspellheim</groupId>
-    <artifactId>actors</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <artifactId>java-actors</artifactId>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Actors</name>
