--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: java
 jdk:
   - oraclejdk8
-# uncomment follow two lines to activate bintray profile for build
 install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V -P bintray
-script: mvn test -P bintray
+script: mvn install -P bintray
