--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <description>
         A simple actor model implementation.
     </description>
-    <url>https://github.com/falkoschumann/java-${project.artifactId}</url>
+    <url>https://github.com/${github.username}/${project.artifactId}</url>
 
     <licenses>
         <license>
@@ -33,19 +33,19 @@
     </developers>
 
     <scm>
-        <connection>scm:git:https://github.com/falkoschumann/java-${project.artifactId}.git</connection>
-        <developerConnection>scm:git:https://github.com/falkoschumann/java-${project.artifactId}.git</developerConnection>
-        <url>http://github.com/falkoschumann/java-${project.artifactId}</url>
+        <connection>scm:git:https://github.com/${github.username}/${project.artifactId}.git</connection>
+        <developerConnection>${scm.connection}</developerConnection>
+        <url>http://github.com/${github.username}/${project.artifactId}</url>
     </scm>
 
     <issueManagement>
         <system>GitHub</system>
-        <url>https://github.com/falkoschumann/java-${project.artifactId}/issues</url>
+        <url>https://github.com/${github.username}/${project.artifactId}/issues</url>
     </issueManagement>
 
     <ciManagement>
         <system>travis-ci</system>
-        <url>https://travis-ci.org/falkoschumann/java-${project.artifactId}</url>
+        <url>https://travis-ci.org/${github.username}/${project.artifactId}</url>
     </ciManagement>
 
     <properties>
@@ -53,6 +53,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <github.username>github-user</github.username>
+        <bintray.username>bintray-user</bintray.username>
     </properties>
 
     <dependencies>
@@ -293,11 +295,6 @@
                     </tagListOptions>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>jdepend-maven-plugin</artifactId>
-                <version>2.0</version>
-            </plugin>
         </plugins>
     </reporting>
 
@@ -309,9 +306,9 @@
                     <snapshots>
                         <enabled>false</enabled>
                     </snapshots>
-                    <id>bintray-falkoschumann-maven</id>
+                    <id>bintray-${bintray.username}-maven</id>
                     <name>bintray</name>
-                    <url>http://dl.bintray.com/falkoschumann/maven</url>
+                    <url>http://dl.bintray.com/${bintray.username}/maven</url>
                 </repository>
             </repositories>
             <pluginRepositories>
@@ -319,16 +316,16 @@
                     <snapshots>
                         <enabled>false</enabled>
                     </snapshots>
-                    <id>bintray-falkoschumann-maven</id>
+                    <id>bintray-${bintray.username}-maven</id>
                     <name>bintray-plugins</name>
-                    <url>http://dl.bintray.com/falkoschumann/maven</url>
+                    <url>http://dl.bintray.com/${bintray.username}/maven</url>
                 </pluginRepository>
             </pluginRepositories>
             <distributionManagement>
                 <repository>
-                    <id>bintray-falkoschumann-maven</id>
-                    <name>falkoschumann-maven</name>
-                    <url>https://api.bintray.com/maven/falkoschumann/maven/${project.artifactId}/;publish=1</url>
+                    <id>bintray-${bintray.username}-maven</id>
+                    <name>bintray</name>
+                    <url>https://api.bintray.com/maven/${bintray.username}/maven/${project.artifactId}/;publish=1</url>
                 </repository>
             </distributionManagement>
         </profile>
