Change from Maven to Gradle

--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,4 @@
-### Maven
-
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-
-### Eclipse
-
-.metadata
-bin/
-tmp/
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.settings/
-.loadpath
-.recommenders
-.project
-.externalToolBuilders/
-*.launch
-*.pydevproject
-.cproject
-.classpath
-.factorypath
-.buildpath
-.target
-.tern-project
-.texlipse
-.springBeans
-.recommenders/
-
-### NetBeans
-
-nbproject/private/
+# Gradle
 build/
-nbbuild/
-dist/
-nbdist/
-nbactions.xml
-.nb-gradle/
-
-### JetBrains
-
-.idea/
-*.iml
-*.iws
-/out/
+.gradle
+gradle.properties
